fix: add gap between elements

--- a/src/pages/not-found-page.scss
+++ b/src/pages/not-found-page.scss
@@ -6,9 +6,16 @@
 
   align-items: center;
   justify-content: center;
-  gap: $spacing-md;
+  gap: $spacing-xxl;
   width: 100%;
   height: 100%;
+}
+
+.animation-wrapper,
+.button-wrapper {
+  @include flex-center;
+  flex-direction: column;
+  gap: $spacing-md;
 }
 
 .not-found-page__image {
